# psacak

./: .gitignore  Cargo.toml  LICENSE  README.md
bench/: compare.sh  download.sh  generate.sh
src/: common.rs  lib.rs  main.rs  naming.rs  pipeline.rs  psacak32.rs  psacak8.rs  sacak32.rs  sacak8.rs  types.rs
src/sacak/: common.rs  compact.rs  mod.rs  naming.rs  pipeline.rs  ranking.rs  sacak32.rs  sacak8.rs  types.rs
