[package]
name = "psacak"
version = "0.0.2"
edition = "2018"

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
libc = "0.2"
term-table = "1.2"
rayon = { version = "1.3", optional = true }

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"

[profile.release]
debug = true
