[package]
name = "psacak"
version = "0.0.3"
edition = "2018"

[dependencies]
cfg-if = "0.1"
rayon = "1.3"
crossbeam = "0.7"
scoped_threadpool = "0.1"
libc = { version = "0.2", optional = true }

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"

[[bin]]
name = "psacak"
required-features = ["libc"]
