[package]
name = "psacak"
version = "0.1.0"
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hucsmn/psacak"
repository = "https://github.com/hucsmn/psacak"
categories = ["algorithms"]
keywords = ["suffix_array", "suffix", "saca", "parallel"]
exclude = ["/bench/**"]
description = "The pSACAK suffix sorting algorithm for huge in-memory data on multicore machines."

[dependencies]
cfg-if = "0.1"
rayon = "1.3"
crossbeam = "0.7"
scoped_threadpool = "0.1"
libc = { version = "0.2", optional = true }
clap = { version = "2.33", optional = true }

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"

[features]
default = []
bin = ["libc", "clap"]

[[bin]]
name = "psacak"
required-features = ["bin"]
